k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                # This tells the Ingress to send traffic...
                name: flask-app-service
                # ...to the service's port 80.
                port:
                  number: 80
